k8s/portfolio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - port: 80
      name: portfolio
      targetPort: 80
